<resources>
    <string name="app_name">Ucar</string>


    <string name="author" translatable="false">Phạm Việt Hùng</string>
    <string name="author_phone" translatable="false">0589089549</string>

    <string name="link_policy" translatable="false">https://policies.google.com/privacy</string>
    <string name="link_share_app" translatable="false">\"\https://play.google.com/store/apps/details?id=\"</string>
    <string name="link_share_market" translatable="false">\"\market://details?id=\"</string>
    <string name="emailFeedBack" translatable="false">"testshare@gmail.com"</string>

    <string name="english" translatable="false">English</string>
    <string name="vietnam" translatable="false">Tiếng Việt</string>

    <string name="vietnamese">Tiếng Việt</string>
    <string name="google">Google</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="create_new_account"><u>Create New Account ?</u></string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="must_be_filled">Must be filled</string>
    <string name="enable_gps">Enable Gps</string>
    <string name="cancel">Cancel</string>
    <string name="active_location">Active Location</string>
    <string name="we_need_your_location_to_enable_nearby_service">We need your location to enable nearby service</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="save">Save</string>
    <string name="user_information">User Information</string>
    <string name="notifications">Notifications</string>
    <string name="activities">Activities</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="you_are_normal_user">You are normal user</string>
    <string name="you_are_driver">You are driver</string>
    <string name="you_must_be_over_18_years_old_to_register">You must be over 18 years old to register</string>
    <string name="arrived">Arrived</string>
    <string name="call_ucar">Call Ucar</string>
    <string name="hyphen">-----------------</string>
    <string name="where_to">Where to ?</string>
    <string name="book">Book</string>
    <string name="my_profile">My Profile</string>
    <string name="languages">Languages</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share_app">Share App</string>
    <string name="confirm_pickup">Confirm pickup</string>
    <string name="confirm_done">Confirm done</string>
    <string name="submit">Submit</string>
    <string name="exit">Exit</string>
    <string name="go_to_online">Go to online</string>
    <string name="go_to_offline">Go to offline</string>
    <string name="booking_fee">Booking fee :</string>
    <string name="distance">Distance :</string>
    <string name="customer_has_not_rated_yet">Customer has not rated yet</string>
    <string name="ride_smart_ride_fast_ride_with_us">Ride Smart. Ride Fast. Ride with Us</string>
    <string name="pay_with_paypal">Pay with Paypal</string>
    <string name="pay_in_cash">Pay in cash</string>
    <string name="earnings">Earnings</string>
    <string name="history">History</string>
    <string name="we_are_looking_for_a_driver_for_you">We are looking for a driver for you....</string>
    <string name="please_select_a_vehicle">Please select a vehicle</string>
    <string name="your_driver_has_arrived">Your driver has arrived.</string>
    <string name="paid">( Paid )</string>
    <string name="_3_recent_transactions">3 recent transactions</string>
    <string name="number_plate">Number plate</string>
    <string name="collect_money">Collect money</string>
    <string name="payment_received">Payment received</string>
    <string name="you_will_receive_for_this_trip">You will receive %1$s for this trip</string>
    <string name="total_earnings">Total earnings</string>
    <string name="forget_password"><u>Forget password</u></string>
    <string name="reset_password">Reset password</string>
    <string name="check_your_email_to_confirm">Check your email to confirm</string>
    <string name="done">Done</string>
    <string name="email_sent_successfully">Email sent successfully</string>
    <string name="view_review">View review</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="payment_successful">Payment Successful</string>
</resources>