<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.signin.SignInFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="Subtitle"
            app:layout_constraintEnd_toEndOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="@id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ripple_white_stroke_round_12"
            android:hint="@string/email"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ripple_white_stroke_round_12"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ripple_white_round_6"
            android:elevation="0dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:backgroundTint="@color/color_38b6ff"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/create_new_account"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/signInButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:padding="6dp"
            />

        <View
            android:id="@+id/viewBlock"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/transparent"
            />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminateTint="@color/color_38b6ff"
            app:layout_constraintBottom_toBottomOf="@id/signInButton"
            app:layout_constraintEnd_toEndOf="@id/signInButton"
            app:layout_constraintStart_toStartOf="@id/signInButton"
            app:layout_constraintTop_toTopOf="@id/signInButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

