<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.forget.ForgetPasswordFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="@string/reset_password"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/check_your_email_to_confirm"
            app:layout_constraintEnd_toEndOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="@id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ripple_white_stroke_round_12"
            android:hint="@string/email"
            android:padding="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_ripple_white_round_6"
            android:backgroundTint="@color/color_38b6ff"
            android:elevation="0dp"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:text="Reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />


        <View
            android:id="@+id/viewBlock"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/color_38b6ff"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/resetBtn"
            app:layout_constraintEnd_toEndOf="@id/resetBtn"
            app:layout_constraintStart_toStartOf="@id/resetBtn"
            app:layout_constraintTop_toTopOf="@id/resetBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

